<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voronoi_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="john_tanguanzhong@hotmail.com">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gestelt_interfaces</depend>
  <depend>minco_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>
  
  <depend>voxel_map</depend>
  <depend>dynamic_voronoi</depend>
  <depend>space_time_astar</depend>
  <depend>pvaj_mpc</depend>
  <depend>minco_traj_gen</depend>

  <depend>logger_wrapper</depend>
  <depend>viz_helper</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
