<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fake_drone</name>
  <version>0.0.0</version>
  <description>Simulated drone without dynamics</description>
  <maintainer email="john_tanguanzhong@hotmail.com">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend> rclcpp </depend>
  <depend> mavros_msgs </depend>
  <depend> nav_msgs </depend>
  <depend> tf2_ros </depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
