<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>viz_helper</name>
  <version>0.0.1</version>
  <description>Library for visualizing planner paths and trajectories</description>
  <maintainer email="john_tanguanzhong@hotmail.com">john</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend> rclcpp </depend>
  <depend> visualization_msgs </depend>
  <depend> px4_msgs </depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
